# hyperon

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
base/: hyperkb.cc
base/core/: category.h  category_manager.h  concept.cc  concept.h  element.cc  element.h  event.h  lineage.h  relation.cc  relation_boundable.cc  relation_boundable.h  role.h
base/link/: link.h
common/: CMakeLists.txt
common/memory/: esft.h
core/: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  README.md  conanfile.py  hyperkb.h
core/base/: CMakeLists.txt  category.cc  category.h  category_manager.h  concept.cc  concept.h  concept_repr.h  context.h  element.cc  element.h  entity.cc  entity.h  lineagable.cc  lineagable.h  lineage.cc  lineage.h  relation.cc  relation.h  role.h
core/include/hyperkb/core/: category.h  category_manager.h  concept.h  concept_repr.h  element.h  hyperkb.h
core/src/: CMakeLists.txt  hyperkb.h  hyperkdb.cpp
core/src/base/: CMakeLists.txt  category.cc  category.h  category_manager.h  concept.cc  concept.h  concept_repr.h  context.h  element.cc  element.h  entity.h  lineagable.cc  lineagable.h  lineage.h  relation.h  role.h
core/src/concept/: category.h  concept.h
core/test_package/: CMakeLists.txt
core/tests/: example.cpp
doc/: Doxyfile
hyperkb-core/: .gitignore  CMakeLists.txt  conanfile.py
hyperkb-core/include/: hyperkdb-core.h
hyperkb-core/include/hyperkb/core/: concept.h  element.h
hyperkb-core/src/: hyperkdb-core.cpp  hyperkdb.cpp
hyperkb-core/test_package/: CMakeLists.txt  conanfile.py
hyperkb-core/test_package/src/: example.cpp
hyperkb-core/testbed/: CMakeLists.txt
hyperkb-server/: CMakeLists.txt
hyperkb-server/src/: hyperkdb-server.cpp
scripts/: format_all.sh
server/: CMakeLists.txt  conanfile.py
server/src/: hyperkdb-server.h  main.cpp
server/test_package/: conanfile.py
src/: CMakeLists.txt
src/base/: CMakeLists.txt  README.md  hyperkb.h  hyperon.cc
src/base/core/: CMakeLists.txt  category.cc  category.h  category_manager.h  concept.cc  concept.h  concept_repr.h  context.h  element.cc  element.h  entity.cc  entity.h  event.h  hyperbase.h  lineagable.h  lineage.cc  lineage.h  relation.cc  relation.h  relation_boundable.cc  relation_boundable.h  role.h
src/base/guile/: CMakeLists.txt
src/base/link/: link.h
src/base/tests/: example.cpp
src/common/: CMakeLists.txt
src/common/json/: jsonizable.h
src/common/memory/: esft.h
src/proto/api/: hyperbase.proto
src/server/: CMakeLists.txt  hyperkb_server.cpp  hyperon_server.cpp
testbed/: CMakeLists.txt
