add_subdirectory(core)
add_subdirectory(link)
add_subdirectory(guile)
if(TEST_ON)
add_subdirectory(tests)
endif()

add_library(hyperon_core STATIC hyperon.cc)
target_link_libraries(hyperon_core hyperon_core_base ${fmt_INCLUDE_DIRS})
set_target_properties(hyperon_core PROPERTIES PUBLIC_HEADER "hyperon.h")